src/App.css
.App {
  text-align: center;
  
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}


.color-block{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%
}

.colors-container{
 
  height: 100vh;
  width: 100vw;

  display: flex;
  align-items: center;
  flex-direction: column;
}

.color-chooser{
  margin: 0px 10px 0px 0px;
  padding: 15px;

  display: flex;
  align-items: center;

}

.home{
  display: flex;
  flex-direction: row-reverse;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

